SERVER-66825 Fix deadlock on MigrationDestinationManager::onStepDown